--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
       <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <p class="price">Starting at $3.00 / brush</p></p>
     </div>
 
+    <!-- FRAMES SECTION -->
+
+    <div>
+      <p class="Title">Frames</p>
+      <p><img src=".\resources\images\hacksaw.jpeg" alt="Hacksaw"></p>
+      <h3>Hacksaw Brushes</h3>
+      <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <p class="price">Starting at $3.00 / brush</p></p>
+    </div>
+
 
 
 
