--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
     <!-- BRUSHES SECTION -->
 
     <div>
-      <p class="Title">Bruhes</p>
+      <p class="Brushes Title">Bruhes</p>
       <p><img src=".\resources\images\hacksaw.jpeg" alt="Hacksaw"></p>
       <h3>Hacksaw Brushes</h3>
-      <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <p class="price">Starting at $3.00 / brush</p></p>
+      <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <mark class="price">class="price">Starting at $3.00 / brush.</mark></p>
     </div>
 
     <!-- FRAMES SECTION -->
 
     <div>
-      <p class="Title">Frames</p>
-      <p><img src=".\resources\images\hacksaw.jpeg" alt="Hacksaw"></p>
-      <h3>Hacksaw Brushes</h3>
-      <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <p class="price">Starting at $3.00 / brush</p></p>
+      <p class="Frames Title">Frames</p>
+      <p><img src=".\resources\images\frames.jpeg" alt="Frames"></p>
+      <h3>Art Frames (assorted)</h3>
+      <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <mark class="price">Starting at $2.00 / frame.</mark></p>
     </div>
 
+    <!-- PAINT SECTION -->
+
+    <div>
+      <p class="Paint Title">Paint</p>
+      <p><img src=".\resources\images\finnish.jpeg" alt="Paint"></p>
+      <h3>Art Frames (assorted)</h3>
+      <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <mark class="price">Starting at $5.00 / tube.</mark></p>
+    </div>
 
 
 
